--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,10 @@ before_install:
   - curl https://sdk.cloud.google.com | bash > /dev/null
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud auth activate-service-account --key-file service-account.json
-
+  - gcloud config set project playground-s-11-911f62
+  - gcloud config set compute/zone us-central1-a
+  - gcloud container clusters get-credentials nodejs-travis
+  - pwd
+  - docker build --tag node-travis:v1 .
+script:
+  - docker run node-travis:v1 -d
