--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,15 @@ sudo: required
 services:
   - docker
 before_install:
-  - openssl aes-256-cbc -K -in service-account.json.enc -out service-account.json -d
+  - openssl aes-256-cbc -K $encrypted_0c35eebf403c_key -iv $encrypted_0c35eebf403c_iv -in service-account.json.enc -out service-account.json -d
   - curl https://sdk.cloud.google.com | bash > /dev/null
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud auth activate-service-account --key-file service-account.json
-  - gcloud config set project playground-s-11-911f62
+  - gcloud config set project playground-s-11-b929a5
   - gcloud config set compute/zone us-central1-a
-  - gcloud container clusters get-credentials nodejs-travis
+  - gcloud container clusters get-credentials gcp-instance1
   - docker build --tag node-travis:v1 .
 script:
   - docker run node-travis:v1 -d
   - pwd
+  - touch test
