--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,17 @@
 sudo: required
-env:
-  global:
-  - CLOUDSDK_CORE_DISABLE_PROMPTS=1
-services:
-  - docker
-before_install:
-  - openssl aes-256-cbc -K $encrypted_0c35eebf403c_key -iv $encrypted_0c35eebf403c_iv -in service-account.json.enc -out service-account.json -d
-  - curl https://sdk.cloud.google.com | bash > /dev/null;
-  - source $HOME/google-cloud-sdk/path.bash.inc
-  - gcloud auth activate-service-account --key-file service-account.json
-  - gcloud config set project playground-s-11-b929a5
-  - gcloud config set compute/zone us-central1-a
+
+before_script:
+  - eval $(ssh-agent -s)
+  - ssh-add <(echo "$GCP_KEY")
+  - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+
 script:
-  - pwd
-  - whoami
-  - git commit -am 'test'
+  - ssh -o StrictHostKeyChecking=no cloud_user_p_f7e98f@35.239.116.27 "touch test"
 
 deploy:
   provider: script
   script: 
-  - ssh -o StrictHostKeyChecking=no cloud_user_p_dfae2c@35.238.113.19 "touch test"
+  - ssh -o StrictHostKeyChecking=no cloud_user_p_f7e98f@35.238.116.27 "touch test"
   on:
     branch: master
 
